--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>TechCare Solutions</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -15,20 +15,22 @@
         <a class="navbar-brand" href="index.html"><img src="resources/logo.png" alt="TechCare Solutions logo" width="73" height="30"></a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home</a>
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="portfolioDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="html/portfolio.html" id="portfolioDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Portfolio
                     </a>
                     <div class="dropdown-menu" aria-labelledby="portfolioDropdown">
                         <a class="dropdown-item" href="#">Project</a>
                         <a class="dropdown-item" href="#">Project2</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="html/portfolio.html">Other projects</a>
                     </div>
                 </li>
                 <li class="nav-item">
