--- a/html/navbar.html
+++ b/html/navbar.html
@@ -1,10 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<!-- Description: This is the navbar for the website. It is included in all pages. -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="../index.html"><img src="../resources/logo.png" alt="TechCare Solutions logo"
+                                                      width="73"
+                                                      height="30"></a>
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a id="navbarHome" class="nav-link" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a id="navbarAbout" class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a id="portfolioDropdown" class="nav-link dropdown-toggle" href="#" role="button"
+                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Portfolio
+                </a>
+                <div class="dropdown-menu" aria-labelledby="portfolioDropdown">
+                    <a class="dropdown-item" href="#">Project</a>
+                    <a class="dropdown-item" href="#">Project2</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a id="navbarPricing" class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+                <a id="navbarContact" class="nav-link" href="#">Contact</a>
+            </li>
+        </ul>
+    </div>
+</nav>
