--- a/html/navbar.html
+++ b/html/navbar.html
@@ -19,6 +19,8 @@
                 <div class="dropdown-menu" aria-labelledby="portfolioDropdown">
                     <a class="dropdown-item" href="#">Project</a>
                     <a class="dropdown-item" href="#">Project2</a>
+                    <div class="dropdown-divider"></div>
+                    <a id="navbarOtherProjects" class="dropdown-item" href="portfolio.html">Other projects</a>
                 </div>
             </li>
             <li class="nav-item">
