--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="../css/bootstrap.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
@@ -15,13 +16,36 @@
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
     <script src="../js/navbar/navbar.js"></script>
+    <script src="../js/loadGithubProjects.js" defer></script>
 </head>
 <body>
 <header>
     <div id="navbar"></div>
 </header>
 <main>
+    <h2>Websites</h2>
+    <h2>Projects</h2>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">
+                Name
+            </th>
+            <th scope="col">
+                <i>Owner</i>
+            </th>
+            <th scope="col">
+                Description
+            </th>
+            <th scope="col">
+                URL
+            </th>
+        </tr>
+        </thead>
+        <tbody id="projectsTable">
 
+        </tbody>
+    </table>
 </main>
 <footer>
 
