added websites JSON to portfolio page

--- a/html/pages/portfolio.html
+++ b/html/pages/portfolio.html
@@ -15,8 +15,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
-    <script src="../js/navbar/navbar.js"></script>
-    <script src="../js/loadGithubProjects.js" defer></script>
+    <script src="../../js/navbar/navbar.js"></script>
+    <script src="../../js/portfolio/loadPortfolio.js" defer></script>
 </head>
 <body>
 <header>
@@ -24,6 +24,20 @@
 </header>
 <main>
     <h2>Websites</h2>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Description</th>
+            <th scope="col">View</th>
+        </tr>
+        </thead>
+        <tbody id="websitesTable">
+        <tr>
+            <td colspan="3" class="text-center">Nothing to show here</td>
+        </tr>
+        </tbody>
+    </table>
     <h2>Projects</h2>
     <table class="table table-striped">
         <thead>
@@ -38,12 +52,14 @@
                 Description
             </th>
             <th scope="col">
-                URL
+                View
             </th>
         </tr>
         </thead>
         <tbody id="projectsTable">
-
+        <tr>
+            <td colspan="4" class="text-center">Nothing to show here</td>
+        </tr>
         </tbody>
     </table>
 </main>
