--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="html/portfolio.html" id="portfolioDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="html/pages/portfolio.html" id="portfolioDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Portfolio
                     </a>
@@ -30,7 +30,7 @@
                         <a class="dropdown-item" href="#">Project</a>
                         <a class="dropdown-item" href="#">Project2</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="html/portfolio.html">Other projects</a>
+                        <a class="dropdown-item" href="html/pages/portfolio.html">Other projects</a>
                     </div>
                 </li>
                 <li class="nav-item">
