--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="html/pages/pricing.html">Pricing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="html/pages/contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
