--- a/index.html
+++ b/index.html
@@ -55,10 +55,39 @@
     </div>
 </header>
 <main>
+    <section class="container mt-5">
+        <h1>Welcome to TechCare Solutions</h1>
+        <p>We are a leading web development company specializing in creating dynamic, user-friendly websites tailored to our clients' requirements. In addition to website development, we also offer reliable and secure web hosting services.</p>
+    </section>
 
+    <section class="container mt-5">
+        <h2>Our Services</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <h3>Tech Support</h3>
+                <p>We provide tech support for all your devices. Our team is available 24/7 to assist you with any issues you may be facing.</p>
+            </div>
+            <div class="col-md-4">
+                <h3>Website Development</h3>
+                <p>We build responsive and interactive websites using JavaScript. Our team ensures that the websites we develop are optimized for performance and SEO.</p>
+            </div>
+            <div class="col-md-4">
+                <h3>Web Hosting</h3>
+                <p>We provide secure and reliable web hosting services. Our hosting solutions are designed to handle any amount of traffic and can scale as your business grows.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="container mt-5">
+        <h2>Contact Us</h2>
+        <p>For any queries or further information, feel free to reach out to us. We're always here to help!</p>
+        <p><a href="mailto:info@techcaresolutions.com">info@techcaresolutions.com</a></p>
+    </section>
 </main>
 <footer>
-
+    <div class="container">
+        <span class="text-muted">© 2023 TechCare Solutions. All rights reserved.</span>
+    </div>
 </footer>
 </body>
 </html>
