--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>TechCare Solutions</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -63,29 +64,43 @@
     <section class="container mt-5">
         <h2>Our Services</h2>
         <div class="row">
-            <div class="col-md-4">
-                <h3>Tech Support</h3>
-                <p>We provide tech support for all your devices. Our team is available 24/7 to assist you with any issues you may be facing.</p>
-            </div>
-            <div class="col-md-4">
-                <h3>Website Development</h3>
-                <p>We build responsive and interactive websites using JavaScript. Our team ensures that the websites we develop are optimized for performance and SEO.</p>
-            </div>
-            <div class="col-md-4">
-                <h3>Web Hosting</h3>
-                <p>We provide secure and reliable web hosting services. Our hosting solutions are designed to handle any amount of traffic and can scale as your business grows.</p>
-            </div>
+            <a href="html/pages/pricing.html" class="col-md-4 text-decoration-none">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body">
+                        <h3 class="card-title">Tech Support</h3>
+                        <p class="card-text">We provide tech support for all your devices. Our team is available 24/7 to assist you with any issues you may be facing.</p>
+                    </div>
+                </div>
+            </a>
+            <a href="html/pages/pricing.html" class="col-md-4 text-decoration-none">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body">
+                        <h3 class="card-title">Website Development</h3>
+                        <p class="card-text">We build responsive and interactive websites using JavaScript. Our team ensures that the websites we develop are optimized for performance and SEO.</p>
+                    </div>
+                </div>
+            </a>
+            <a href="html/pages/pricing.html" class="col-md-4 text-decoration-none">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body">
+                        <h3 class="card-title">Web Hosting</h3>
+                        <p class="card-text">We provide secure and reliable web hosting services. Our hosting solutions are designed to handle any amount of traffic and can scale as your business grows.</p>
+                    </div>
+                </div>
+            </a>
         </div>
     </section>
 
     <section class="container mt-5">
         <h2>Contact Us</h2>
         <p>For any queries or further information, feel free to reach out to us. We're always here to help!</p>
-        <p><a href="mailto:info@techcaresolutions.com">info@techcaresolutions.com</a></p>
+        <a href="html/pages/contact.html">
+            <button type="button" class="btn btn-dark">Contact</button>
+        </a>
     </section>
 </main>
 <footer>
-    <div class="container">
+    <div class="text-center fixed-bottom p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         <span class="text-muted">© 2023 TechCare Solutions. All rights reserved.</span>
     </div>
 </footer>
