--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/pages/pricing.html">Pricing</a>
+                        <a class="nav-link" href="html/pages/services.html">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="html/pages/contact.html">Contact</a>
