--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section class="container mt-5">
         <h2>Our Services</h2>
         <div class="row">
-            <a href="html/pages/pricing.html" class="col-md-4 text-decoration-none">
+            <a href="html/pages/services.html" class="col-md-4 text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
                         <h3 class="card-title">Tech Support</h3>
@@ -72,7 +72,7 @@
                     </div>
                 </div>
             </a>
-            <a href="html/pages/pricing.html" class="col-md-4 text-decoration-none">
+            <a href="html/pages/services.html" class="col-md-4 text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
                         <h3 class="card-title">Website Development</h3>
@@ -80,7 +80,7 @@
                     </div>
                 </div>
             </a>
-            <a href="html/pages/pricing.html" class="col-md-4 text-decoration-none">
+            <a href="html/pages/services.html" class="col-md-4 text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
                         <h3 class="card-title">Web Hosting</h3>
