--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/index.css">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
@@ -58,33 +59,38 @@
 <main>
     <section class="container mt-5">
         <h1>Welcome to TechCare Solutions</h1>
-        <p>We are a leading web development company specializing in creating dynamic, user-friendly websites tailored to our clients' requirements. In addition to website development, we also offer reliable and secure web hosting services.</p>
+        <p>We are a leading web development company specializing in creating dynamic, user-friendly websites tailored to
+            our clients' requirements. In addition to website development, we also offer reliable and secure web hosting
+            services.</p>
     </section>
 
     <section class="container mt-5">
         <h2>Our Services</h2>
         <div class="row">
-            <a href="html/pages/services.html" class="col-md-4 text-decoration-none">
+            <a href="html/pages/services.html" class="col-md-4 cardLink">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
                         <h3 class="card-title">Tech Support</h3>
-                        <p class="card-text">We provide tech support for all your devices. Our team is available 24/7 to assist you with any issues you may be facing.</p>
+                        <p class="card-text">We provide tech support for all your devices. Our team is available 24/7 to
+                            assist you with any issues you may be facing.</p>
                     </div>
                 </div>
             </a>
-            <a href="html/pages/services.html" class="col-md-4 text-decoration-none">
+            <a href="html/pages/services.html" class="col-md-4 cardLink">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
                         <h3 class="card-title">Website Development</h3>
-                        <p class="card-text">We build responsive and interactive websites using JavaScript. Our team ensures that the websites we develop are optimized for performance and SEO.</p>
+                        <p class="card-text">We build responsive and interactive websites using JavaScript. Our team
+                            ensures that the websites we develop are optimized for performance and SEO.</p>
                     </div>
                 </div>
             </a>
-            <a href="html/pages/services.html" class="col-md-4 text-decoration-none">
+            <a href="html/pages/services.html" class="col-md-4 cardLink">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
                         <h3 class="card-title">Web Hosting</h3>
-                        <p class="card-text">We provide secure and reliable web hosting services. Our hosting solutions are designed to handle any amount of traffic and can scale as your business grows.</p>
+                        <p class="card-text">We provide secure and reliable web hosting services. Our hosting solutions
+                            are designed to handle any amount of traffic and can scale as your business grows.</p>
                     </div>
                 </div>
             </a>
