added footer template and JS, added script to all current pages

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
+    <script src="js/dynamic/footer.js" defer></script>
 </head>
 <body>
 <header>
@@ -106,9 +107,6 @@
     </section>
 </main>
 <footer>
-    <div class="text-center fixed-bottom p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        <span class="text-muted">© 2023 TechCare Solutions. All rights reserved.</span>
-    </div>
 </footer>
 </body>
 </html>
