--- a/html/pages/portfolio.html
+++ b/html/pages/portfolio.html
@@ -15,8 +15,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
-    <script src="../../js/navbar/navbar.js"></script>
+    <script src="../../js/dynamic/navbar.js"></script>
     <script src="../../js/portfolio/loadPortfolio.js" defer></script>
+    <script src="../../js/dynamic/footer.js" defer></script>
 </head>
 <body>
 <header>
