added initial about content #6

--- a/html/pages/about.html
+++ b/html/pages/about.html
@@ -22,7 +22,42 @@
   <div id="navbar"></div>
 </header>
 <main>
+    <section class="container mt-5">
+        <h1>About TechCare Solutions</h1>
+        <p>TechCare Solutions is a leading web development company specializing in creating dynamic, user-friendly websites tailored to our clients' requirements. We are committed to providing top-notch web solutions to cater to your business needs.</p>
+    </section>
 
+    <section class="container mt-5">
+        <h2>Our Team</h2>
+        <div class="row">
+            <!-- Luca's Card -->
+            <div class="col-md-6">
+                <div class="card">
+                    <img class="card-img-top" src="" alt="Luca">
+                    <div class="card-body">
+                        <h5 class="card-title">Luca</h5>
+                        <p class="card-text">Luca is a student of Applied Computer Science. He is passionate about web development and is dedicated to providing top-notch web solutions.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Kobe's Card -->
+            <div class="col-md-6">
+                <div class="card">
+                    <img class="card-img-top" src="" alt="Kobe">
+                    <div class="card-body">
+                        <h5 class="card-title">Kobe</h5>
+                        <p class="card-text">Kobe is also a student of Applied Computer Science. He shares the same passion for web development and is committed to helping businesses grow in the digital world.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container mt-5">
+        <h2>Mission and Vision</h2>
+        <p>Our mission is to provide reliable and secure web solutions that help businesses grow and succeed in the digital world. We envision ourselves as a trusted partner for businesses, providing them with the technology solutions they need to reach their goals.</p>
+    </section>
 </main>
 <footer></footer>
 </body>
