added contact page

--- a/html/pages/contact.html
+++ b/html/pages/contact.html
@@ -21,5 +21,35 @@
 <header>
     <div id="navbar"></div>
 </header>
+<main>
+    <section class="container mt-5">
+        <h1>Contact Us</h1>
+        <p>If you have any questions or would like to discuss how we can help your business, please fill out the form below and we will get back to you as soon as possible.</p>
+        <form>
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name" placeholder="Your name">
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="Your email">
+            </div>
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control" id="message" rows="3" placeholder="Your message"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </section>
+
+    <!-- Company Info Section -->
+    <section class="container mt-5">
+        <h2>Our Company Info</h2>
+        <p>TechCare Solutions</p>
+        <p>adress</p>
+        <p>Phone:</p>
+        <p>Email: info@techcaresolutions.com</p>
+    </section>
+</main>
 </body>
 </html>
