added initial services content

--- a/html/pages/services.html
+++ b/html/pages/services.html
@@ -21,5 +21,22 @@
 <header>
     <div id="navbar"></div>
 </header>
+<main>
+    <section id="tech-support" class="container mt-5">
+        <h1>Tech Support</h1>
+        <p>We provide tech support for all your devices. Our team is available 24/7 to assist you with any issues you may be facing.</p>
+    </section>
+
+    <section id="website-development" class="container mt-5">
+        <h1>Website Development</h1>
+        <p>We build responsive and interactive websites using JavaScript. Our team ensures that the websites we develop are optimized for performance and SEO.</p>
+    </section>
+
+    <section id="web-hosting" class="container mt-5">
+        <h1>Web Hosting</h1>
+        <p>We provide secure and reliable web hosting services. Our hosting solutions are designed to handle any amount of traffic and can scale as your business grows.</p>
+    </section>
+</main>
+<footer></footer>
 </body>
 </html>
