update the new index, looks more like the wireframe

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <header>
     <div id="navbar">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <h2 class="d-none">Navbar</h2>
             <a class="navbar-brand" href="index.html"><img src="resources/logo.png" alt="TechCare Solutions logo"
                                                            width="73"
                                                            height="30"></a>
@@ -64,11 +65,12 @@
             <img src="" alt="Image of pc stuff">
             <p>We create elegant solutions</p>
         </div>
-        <section class="container mt-5">
-            <h2>Our Services</h2>
+        <section class="container cards">
+            <h2 class="d-none">Our Services</h2>
             <div class="row">
-                <a href="html/pages/services.html#tech-support" class="col-md-4 cardLink">
+                <a href="html/pages/services.html#tech-support" class="col-3 cardLink">
                     <div class="card h-100 shadow-sm">
+                        <img src="resources/fixdesign-burgdorf-schweiz-pc-support-vor-ort.png" alt="Icon" class="card-img-top image-cropper">
                         <div class="card-body">
                             <h3 class="card-title">Tech Support</h3>
                             <p class="card-text">We provide tech support for all your devices. Our team is available 24/7 to
@@ -76,8 +78,9 @@
                         </div>
                     </div>
                 </a>
-                <a href="html/pages/services.html#website-development" class="col-md-4 cardLink">
+                <a href="html/pages/services.html#website-development" class="col-3 cardLink">
                     <div class="card h-100 shadow-sm">
+                        <img src="resources/fixdesign-burgdorf-schweiz-pc-support-vor-ort.png" alt="Icon" class="card-img-top image-cropper">
                         <div class="card-body">
                             <h3 class="card-title">Website Development</h3>
                             <p class="card-text">We build responsive and interactive websites using JavaScript. Our team
@@ -85,8 +88,9 @@
                         </div>
                     </div>
                 </a>
-                <a href="html/pages/services.html#web-hosting" class="col-md-4 cardLink">
+                <a href="html/pages/services.html#web-hosting" class="col-3 cardLink">
                     <div class="card h-100 shadow-sm">
+                        <img src="resources/fixdesign-burgdorf-schweiz-pc-support-vor-ort.png" alt="Icon" class="card-img-top image-cropper">
                         <div class="card-body">
                             <h3 class="card-title">Web Hosting</h3>
                             <p class="card-text">We provide secure and reliable web hosting services. Our hosting solutions
