started work on contact us part on index

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="js/dynamic/footer.js" defer></script>
 </head>
 <body>
+<h1 class="d-none">HomePage TechCare Solutions</h1>
 <header>
     <div id="navbar">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -63,24 +64,35 @@
     <div class="mainGrid">
         <div class="banner">
             <img src="" alt="Image of pc stuff">
-            <p>We create elegant solutions</p>
+            <section class="container mt-5">
+                <h2>Welcome to TechCare Solutions</h2>
+                <p>We are a leading web development company specializing in creating dynamic, user-friendly websites
+                    tailored to
+                    our clients' requirements. In addition to website development, we also offer reliable and secure web
+                    hosting
+                    services.</p>
+            </section>
+
         </div>
         <section class="container cards">
             <h2 class="d-none">Our Services</h2>
             <div class="row">
                 <a href="html/pages/services.html#tech-support" class="col-3 cardLink">
                     <div class="card h-100 shadow-sm">
-                        <img src="resources/fixdesign-burgdorf-schweiz-pc-support-vor-ort.png" alt="Icon" class="card-img-top image-cropper">
+                        <img src="resources/fixdesign-burgdorf-schweiz-pc-support-vor-ort.png" alt="Icon"
+                             class="card-img-top image-cropper">
                         <div class="card-body">
                             <h3 class="card-title">Tech Support</h3>
-                            <p class="card-text">We provide tech support for all your devices. Our team is available 24/7 to
+                            <p class="card-text">We provide tech support for all your devices. Our team is available
+                                24/7 to
                                 assist you with any issues you may be facing.</p>
                         </div>
                     </div>
                 </a>
                 <a href="html/pages/services.html#website-development" class="col-3 cardLink">
                     <div class="card h-100 shadow-sm">
-                        <img src="resources/fixdesign-burgdorf-schweiz-pc-support-vor-ort.png" alt="Icon" class="card-img-top image-cropper">
+                        <img src="resources/fixdesign-burgdorf-schweiz-pc-support-vor-ort.png" alt="Icon"
+                             class="card-img-top image-cropper">
                         <div class="card-body">
                             <h3 class="card-title">Website Development</h3>
                             <p class="card-text">We build responsive and interactive websites using JavaScript. Our team
@@ -90,10 +102,12 @@
                 </a>
                 <a href="html/pages/services.html#web-hosting" class="col-3 cardLink">
                     <div class="card h-100 shadow-sm">
-                        <img src="resources/fixdesign-burgdorf-schweiz-pc-support-vor-ort.png" alt="Icon" class="card-img-top image-cropper">
+                        <img src="resources/fixdesign-burgdorf-schweiz-pc-support-vor-ort.png" alt="Icon"
+                             class="card-img-top image-cropper">
                         <div class="card-body">
                             <h3 class="card-title">Web Hosting</h3>
-                            <p class="card-text">We provide secure and reliable web hosting services. Our hosting solutions
+                            <p class="card-text">We provide secure and reliable web hosting services. Our hosting
+                                solutions
                                 are designed to handle any amount of traffic and can scale as your business grows.</p>
                         </div>
                     </div>
@@ -101,28 +115,16 @@
             </div>
         </section>
     </div>
-    <div id="ContactUs">
-
+    <div id="c  ontactUs" class="row">
+        <img src="resources/fixdesign-burgdorf-schweiz-pc-support-vor-ort.png" alt="temp" class="col">
+        <section class="container mt-5">
+            <h2>Contact Us</h2>
+            <p>For any queries or further information, feel free to reach out to us. We're always here to help!</p>
+            <a href="html/pages/contact.html">
+                <button type="button" class="btn btn-dark">Contact</button>
+            </a>
+        </section>
     </div>
-
-
-    <!--    Old index -->
-    <section class="container mt-5">
-        <h1>Welcome to TechCare Solutions</h1>
-        <p>We are a leading web development company specializing in creating dynamic, user-friendly websites tailored to
-            our clients' requirements. In addition to website development, we also offer reliable and secure web hosting
-            services.</p>
-    </section>
-
-
-
-    <section class="container mt-5">
-        <h2>Contact Us</h2>
-        <p>For any queries or further information, feel free to reach out to us. We're always here to help!</p>
-        <a href="html/pages/contact.html">
-            <button type="button" class="btn btn-dark">Contact</button>
-        </a>
-    </section>
 </main>
 <footer>
 </footer>
