--- a/html/indextemp.html
+++ b/html/indextemp.html
@@ -1,10 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>TechCare Solutions</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/site.css">
+    <link rel="stylesheet" href="css/index.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+    <script src="js/dynamic/footer.js" defer></script>
 </head>
 <body>
-$END$
+<h1 class="d-none">HomePage TechCare Solutions</h1>
+<header>
+    <div id="navbar">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <h2 class="d-none">Navbar</h2>
+            <a class="navbar-brand" href="index.html"><img src="resources/logo.png" alt="TechCare Solutions logo"
+                                                           width="73"
+                                                           height="30"></a>
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="html/pages/about.html">About</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="html/pages/portfolio.html" id="portfolioDropdown"
+                           role="button"
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Portfolio
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="portfolioDropdown">
+                            <a class="dropdown-item" href="#">Project</a>
+                            <a class="dropdown-item" href="#">Project2</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="html/pages/portfolio.html">Other projects</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="html/pages/services.html">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="html/pages/contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</header>
+<main>
+    <div class="mainGrid">
+        <div class="banner">
+            <img src="" alt="Image of pc stuff">
+            <section class="container mt-5">
+                <h2>Welcome to TechCare Solutions</h2>
+                <p>We are a leading web development company specializing in creating dynamic, user-friendly websites
+                    tailored to
+                    our clients' requirements. In addition to website development, we also offer reliable and secure web
+                    hosting
+                    services.</p>
+            </section>
+
+        </div>
+        <section class="container cards">
+            <h2 class="d-none">Our Services</h2>
+            <div class="row">
+                <a href="html/pages/services.html#tech-support" class="col-3 cardLink">
+                    <div class="card h-100 shadow-sm">
+                        <img src="resources/fixdesign-burgdorf-schweiz-pc-support-vor-ort.png" alt="Icon"
+                             class="card-img-top image-cropper">
+                        <div class="card-body">
+                            <h3 class="card-title">Tech Support</h3>
+                            <p class="card-text">We provide tech support for all your devices. Our team is available
+                                24/7 to
+                                assist you with any issues you may be facing.</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="html/pages/services.html#website-development" class="col-3 cardLink">
+                    <div class="card h-100 shadow-sm">
+                        <img src="resources/fixdesign-burgdorf-schweiz-pc-support-vor-ort.png" alt="Icon"
+                             class="card-img-top image-cropper">
+                        <div class="card-body">
+                            <h3 class="card-title">Website Development</h3>
+                            <p class="card-text">We build responsive and interactive websites using JavaScript. Our team
+                                ensures that the websites we develop are optimized for performance and SEO.</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="html/pages/services.html#web-hosting" class="col-3 cardLink">
+                    <div class="card h-100 shadow-sm">
+                        <img src="resources/fixdesign-burgdorf-schweiz-pc-support-vor-ort.png" alt="Icon"
+                             class="card-img-top image-cropper">
+                        <div class="card-body">
+                            <h3 class="card-title">Web Hosting</h3>
+                            <p class="card-text">We provide secure and reliable web hosting services. Our hosting
+                                solutions
+                                are designed to handle any amount of traffic and can scale as your business grows.</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </section>
+    </div>
+    <div id="contactUs" class="row">
+        <img src="resources/fixdesign-burgdorf-schweiz-pc-support-vor-ort.png" alt="temp" class="col">
+        <section class="container mt-5">
+            <h2>Contact Us</h2>
+            <p>For any queries or further information, feel free to reach out to us. We're always here to help!</p>
+            <a href="html/pages/contact.html">
+                <button type="button" class="btn btn-dark">Contact</button>
+            </a>
+        </section>
+    </div>
+</main>
+<footer>
+</footer>
 </body>
 </html>
