--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 <header>
 </header>
 <main>
-    This website is under construction
+    <center>
+        <p>This website is under construction.</p>
+        <p>You can contact us at <a href="mailto:info@techcaresolutions.be">info@techcaresolutions.be</a></p>
+    </center>
 </main>
 <footer>
 </footer>
